# sparc

./: LICENSE  README.md  environment.yml  install.sh  pyproject.toml  pyrightconfig.json  setup.py
docs/: conf.py  flowchart.drawio  index.rst  quickstart.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/api/: index.rst  md.rst
docs/source/: DataProcess.rst  calculator.rst  conf.py  flowchart.drawio  index.rst  install.rst  plumed_wrapper.rst  quickstart.rst  workflow.rst
docs/source/_static/: custom.css
docs/tests/: 1.py  2.py  CMATRIX  POSCAR  UnbiasMD.xyz  bck.1.CMATRIX  bck.2.CMATRIX  input.json  input.yaml  isomer.xyz  run.sh  run_asePLumed.sh
docs/tests/nh3bh3/: INCAR  POSCAR  RunLammpsTest.sh  Script_lsf.sh  energies.csv  get_energies.sh  input.json  input.yaml  progress.json
paper/: paper.md  ref.bib
scripts/: deepmd.yml  input.json  input.yaml  install.sh  plot_model_devi.py
sparc/: sparc.py
sparc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sparc/src/: active_learning.py  ase_md.py  calculator.py  deepmd.py  lammpsmd.py  plumed_wrapper.py
src/: __init__.py  active_learning.py  ase_md.py  config.py  deepmd_training.py  dpmd_setup.py  labelling.py  plumed_wrapper.py  read_input.py  sparc.py  utils.py  vasp_setup.py
src/SPARC.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sparc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+3529 files in other folders)
