[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparc"
version = "0.1.0"
description = "A package for DeepMD training and on-the-fly learning with VASP"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
  { name = "Rahul Verma", email = "rverma7@ncsu.edu" }
]
keywords = ["deepmd", "molecular dynamics", "active learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry"
]

dependencies = [
  "ase==3.24.0",
  "numpy",
  "pandas",
  "scipy",
  "dpdata",
  "cython",
  "joblib",
  "tqdm"
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints"]

[project.scripts]
sparc = "sparc.sparc:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sparc", "sparc.*"]
